# 2Q_cache

./: .gitignore  CMakeLists.txt  README.md
.github/: workflow.yml  workflows.yml
.github/workflows/: workflow.yml
include/: cache.hh  ideal_cache.hh  page.hh
src/: main.cc  main_2q.cc  main_ideal_cache.cc
tests/: CMakeLists.txt  cache_2q_test.cc  ideal_cache.cc  test.cc
